--- a/firmware/MUSIA/VisualGDB/MUSIA.vcxproj
+++ b/firmware/MUSIA/VisualGDB/MUSIA.vcxproj
@@ -187,7 +187,14 @@
     <ClInclude Include="..\ps2_packet.h" />
     <ClInclude Include="..\usbd_pid.h" />
     <ClInclude Include="..\USB\Lib\Inc\hid_usage.h" />
+    <ClInclude Include="..\USB\Lib\Inc\private\usbd_internal.h" />
+    <ClInclude Include="..\USB\Lib\Inc\private\usbd_msc_private.h" />
+    <ClInclude Include="..\USB\Lib\Inc\private\usbd_private.h" />
     <ClInclude Include="..\USB\Lib\Inc\usbd_dfu.h" />
+    <ClInclude Include="..\USB\XPD\xpd_exti.h" />
+    <ClInclude Include="..\USB\XPD\xpd_gpio.h" />
+    <ClInclude Include="..\USB\XPD\xpd_mco.h" />
+    <ClInclude Include="..\USB\XPD\xpd_rcc_cc.h" />
     <ClInclude Include="..\usb_joystick.h" />
     <None Include="stm32.props" />
     <ClCompile Include="$(BSP_ROOT)\STM32F0xxxx\STM32F0xx_HAL_Driver\Src\stm32f0xx_hal.c" />
