update project file

--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -166,6 +166,7 @@
       <DependentUpon>SkinFoldersForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Skinning\BuiltInMappings.cs" />
     <Compile Include="Skinning\NintendoSpyMapping.cs" />
     <Compile Include="Skinning\SkinToBitmapRenderer.cs" />
     <Compile Include="Util\ColorPickerControl.cs">
