--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -166,6 +166,7 @@
       <DependentUpon>SkinFoldersForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Properties\Annotations1.cs" />
     <Compile Include="Skinning\BuiltInMappings.cs" />
     <Compile Include="Skinning\NintendoSpyMapping.cs" />
     <Compile Include="Skinning\SkinToBitmapRenderer.cs" />
@@ -320,7 +321,9 @@
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
     <None Include="Properties\DataSources\MUNIA.Controllers.ControllerMapping+AxisMap.datasource" />
+    <None Include="Properties\DataSources\MUNIA.Controllers.ControllerMapping+AxisToButtonMap.datasource" />
     <None Include="Properties\DataSources\MUNIA.Controllers.ControllerMapping+ButtonMap.datasource" />
+    <None Include="Properties\DataSources\MUNIA.Controllers.ControllerMapping+ButtonToAxisMap.datasource" />
     <None Include="Properties\DataSources\MUNIA.Skins.ColorRemap.datasource" />
   </ItemGroup>
   <ItemGroup>
