--- a/firmware/MUSIA/VisualGDB/MUSIA.vcxproj
+++ b/firmware/MUSIA/VisualGDB/MUSIA.vcxproj
@@ -18,7 +18,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{F9B71E82-BCCE-4DB0-9CDA-7DD3F353233A}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
-    <BSP_VERSION>2018.08</BSP_VERSION>
+    <BSP_VERSION>2018.12R2</BSP_VERSION>
     <InPlaceBSPSubdir />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
